--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jest-preset-preact": "^1.0.0",
     "per-env": "^1.0.2",
     "preact-cli": "^3.0.0-rc.5",
-    "preact-render-spy": "^1.2.1"
+    "preact-render-spy": "^1.2.1",
+    "webpack-bundle-analyzer": "^3.4.1"
   },
   "dependencies": {
     "preact": "^10.0.0-rc.1",
