--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -2,6 +2,7 @@ backend:
   name: git-gateway
   branch: master
 media_folder: src/assets
+public_folder: /assets
 collections:
   - name: "pages"
     label: "Pages"
