--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -6,6 +6,9 @@ public_folder: /assets
 collections:
   - name: "pages"
     label: "Pages"
+    label_singular: 'Page' # Used in the UI, ie: "New Post"
+    folder: 'blog'
+    create: true
     files:
     - label: "Home"
       name: "home"
