--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -6,20 +6,19 @@ public_folder: /assets
 collections:
   - name: "pages"
     label: "Pages"
-    label_singular: 'Page' # Used in the UI, ie: "New Post"
-    folder: 'content/blog'
+    label_singular: "Page" # Used in the UI, ie: "New Post"
+    folder: "content/blog"
     create: true
     fields:
       - { label: "Title", name: "title", widget: "string"}
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Body", name: "body", widget: "markdown"}
   - name: "photos"
-    label: "Photos"
-    files:
-    - label: "Home"
-      name: "home"
-      file: "content/blog/photo.md"
-      fields:
-        - { label: "Title", name: "title", widget: "string"}
-        - { label: "Publish Date", name: "date", widget: "datetime" }
-        - { label: "Body", name: "body", widget: "markdown"}
+    label: "Photograph"
+    label_singular: "Photograph"
+    folder: "content/images"
+    fields:
+      - { label: "Picture name", name: "title", widget: "string"}
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Photograph", name: "body", widget: "image"}
+      - { label: "Description", name: "body", widget: "markdown"}
