--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -17,6 +17,7 @@ collections:
     label: "Photograph"
     label_singular: "Photograph"
     folder: "content/images"
+    create: true
     fields:
       - { label: "Picture name", name: "title", widget: "string"}
       - { label: "Publish Date", name: "date", widget: "datetime" }
