--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -21,5 +21,5 @@ collections:
     fields:
       - { label: "Picture name", name: "title", widget: "string"}
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Photograph", name: "body", widget: "image"}
+      - { label: "Photograph", name: "photo", widget: "image"}
       - { label: "Description", name: "body", widget: "markdown"}
