--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "glob": "^7.1.4",
     "jest": "^21.2.1",
     "jest-preset-preact": "^1.0.0",
+    "markdown": "^0.5.0",
     "per-env": "^1.0.2",
     "preact-cli": "^3.0.0-rc.5",
     "preact-render-spy": "^1.2.1",
