--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -12,6 +12,7 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string"}
       - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Tags", name: "tags", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown"}
   - name: "photos"
     label: "Photograph"
