--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "preact": "^10.0.0-rc.1",
+    "preact-cli-plugin-netlify": "^1.4.0",
     "preact-compat": "^3.17.0",
     "preact-render-to-string": "^4.1.0",
     "preact-router": "^3.0.1"
