--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "webpack-bundle-analyzer": "^3.4.1"
   },
   "dependencies": {
-    "preact": "^10.0.0-rc.1",
+    "preact": "^10.0.0",
     "preact-cli-plugin-netlify": "^1.5.0",
-    "preact-compat": "^3.17.0",
-    "preact-render-to-string": "^4.1.0",
+    "preact-render-to-string": "^5.0.6",
     "preact-router": "^3.0.1"
   },
   "jest": {
