--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-bundle-analyzer": "^3.4.1"
   },
   "dependencies": {
+    "@preact/prerender-data-provider": "^0.0.1",
     "preact": "^10.0.0",
     "preact-cli-plugin-netlify": "^1.5.0",
     "preact-render-to-string": "^5.0.6",
