--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "@preact/prerender-data-provider": "^0.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "markdown-to-jsx": "^6.10.3",
     "preact": "^10.0.0",
     "preact-cli-plugin-netlify": "^1.5.0",
