improving code highlight for blog

--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -12,7 +12,8 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string"}
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Subtitle", name: "subtitle", widget: "string"}
-      - { label: "Cover", name: "cover", widget: "image"}
+      - { label: "Subtitle", name: "subtitle", widget: "string", required: false}
+      - { label: "Cover", name: "cover", widget: "image", required: false}
       - { label: "Tags", name: "tags", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown"}
+
