--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "blog",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "start": "per-env",
@@ -27,8 +27,9 @@
     "jest-preset-preact": "^1.0.0",
     "markdown": "^0.5.0",
     "per-env": "^1.0.2",
-    "preact-cli": "^3.0.0-rc.6",
+    "preact-cli": "^3.0.0-rc.7",
     "preact-render-spy": "^1.2.1",
+    "react-syntax-highlighter": "^12.2.1",
     "webpack-bundle-analyzer": "^3.4.1"
   },
   "dependencies": {
