Fix missing dependency
fix #5

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "preact-cli": "^3.0.0-rc.7",
     "preact-render-spy": "^1.2.1",
     "react-syntax-highlighter": "^12.2.1",
-    "webpack-bundle-analyzer": "^3.4.1"
+    "webpack-bundle-analyzer": "^3.4.1",
   },
   "dependencies": {
     "@preact/prerender-data-provider": "^0.0.1",
@@ -40,7 +40,8 @@
     "preact": "^10.0.0",
     "preact-cli-plugin-netlify": "^1.5.0",
     "preact-render-to-string": "^5.0.6",
-    "preact-router": "^3.0.1"
+    "preact-router": "^3.0.1",
+    "parse-md": "^2.0.4"
   },
   "jest": {
     "preset": "jest-preset-preact"
