--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "blog",
   "description": "Preact's netlify CMS template",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "scripts": {
     "start": "per-env",
@@ -28,19 +28,19 @@
     "jest-preset-preact": "^1.0.0",
     "markdown": "^0.5.0",
     "per-env": "^1.0.2",
-    "preact-cli": "^3.0.0-rc.7",
+    "preact-cli": "^3.0.1",
     "preact-render-spy": "^1.2.1",
     "react-syntax-highlighter": "^12.2.1",
     "webpack-bundle-analyzer": "^3.4.1"
   },
   "dependencies": {
-    "@preact/prerender-data-provider": "^0.0.1",
+    "@preact/prerender-data-provider": "^3.0.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "markdown-to-jsx": "^6.10.3",
-    "preact": "^10.0.0",
-    "preact-cli-plugin-netlify": "^1.5.0",
-    "preact-render-to-string": "^5.0.6",
+    "preact": "^10.4.6",
+    "preact-cli-plugin-netlify": "^1.6.0",
+    "preact-render-to-string": "^5.1.10",
     "preact-router": "^3.0.1",
     "parse-md": "^2.0.4"
   },
