--- a/package.json
+++ b/package.json
@@ -27,22 +27,25 @@
     "jest": "^21.2.1",
     "jest-preset-preact": "^1.0.0",
     "markdown": "^0.5.0",
+    "node-sass": "^4.14.1",
     "per-env": "^1.0.2",
     "preact-cli": "^3.0.1",
     "preact-render-spy": "^1.2.1",
     "react-syntax-highlighter": "^12.2.1",
+    "sass-loader": "^9.0.3",
     "webpack-bundle-analyzer": "^3.4.1"
   },
   "dependencies": {
+    "@denysvuika/preact-translate": "^0.3.0",
     "@preact/prerender-data-provider": "^3.0.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "markdown-to-jsx": "^6.10.3",
+    "parse-md": "^2.0.4",
     "preact": "^10.4.6",
     "preact-cli-plugin-netlify": "^1.6.0",
     "preact-render-to-string": "^5.1.10",
-    "preact-router": "^3.0.1",
-    "parse-md": "^2.0.4"
+    "preact-router": "^3.0.1"
   },
   "jest": {
     "preset": "jest-preset-preact"
