--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "blog",
+  "name": "Vanderfool",
   "description": "Preact's netlify CMS template",
   "version": "0.1.3",
   "license": "MIT",
