minor text edit

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "blog",
-  "short_name": "blog",
+  "name": "Vanderfool",
+  "short_name": "Vanderfool",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
