--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -4,56 +4,20 @@ backend:
 media_folder: src/assets
 public_folder: /assets
 collections:
-  - name: "posts_en"
-    label: "Posts english"
-    label_singular: "Post english" # Used in the UI, ie: "New Post"
-    folder: "content/blogs_en"
+  - name: "posts"
+    label: "Posts"
+    label_singular: "Post"
+    folder: "content/blogs"
     create: true
     fields:
       - { label: "Title", name: "title", widget: "string"}
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Cover", name: "cover", widget: "image", required: false}
       - { label: "Body", name: "body", widget: "markdown"}
-  - name: "posts_fr"
-    label: "Posts french"
-    label_singular: "Post french" # Used in the UI, ie: "New Post"
-    folder: "content/blogs_fr"
-    create: true
+  - name: "pages"
+    label: "Pages"
+    label_singular: "Page"
+    folder: "content/pages"
     fields:
       - { label: "Title", name: "title", widget: "string"}
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Cover", name: "cover", widget: "image", required: false}
       - { label: "Body", name: "body", widget: "markdown"}
-  - label: "Pages"
-    name: "pages"
-    files:
-      - label: "Contact Page english"
-        name: "contact"
-        file: "content/pages_en/contact.md"
-        fields:
-          - {label: Body, name: body, widget: markdown}
-      - label: "Privacy Policy Page english"
-        name: "privacy_policy"
-        file: "content/pages_en/privacy-policy.md"
-        fields:
-          - {label: Body, name: body, widget: markdown}
-      - label: "Registered english"
-        name: "registered"
-        file: "content/pages_en/registered.md"
-        fields:
-          - {label: Body, name: body, widget: markdown}
-      - label: "Contact Page french"
-        name: "contact"
-        file: "content/pages_fr/contact.md"
-        fields:
-          - {label: Body, name: body, widget: markdown}
-      - label: "Privacy Policy Page french"
-        name: "privacy_policy"
-        file: "content/pages_fr/privacy-policy.md"
-        fields:
-          - {label: Body, name: body, widget: markdown}
-      - label: "Registered french"
-        name: "registered"
-        file: "content/pages_fr/registered.md"
-        fields:
-          - {label: Body, name: body, widget: markdown}
